Input and textareas are no longer behind the move button. Input resizing is slightly smoother.

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ textarea {
 textarea {
   max-width: 99%; /*This doesn't work oops*/
   width: 90%;
-  padding-left: 40px;
   min-height: 40px;
+  margin-left: 40px;
 }
 
 button {
@@ -44,11 +44,11 @@ button {
 input.header {
   padding: 0;
   margin-top: 10px;
+  margin-left: 40px;
   margin-bottom: 2px;
-  text-align: left;
+  text-align: center;
   font-size: 50px;
   border-color: transparent;
-  padding-left: 40px;
 }
 
 #add {
